Ktlyns.Core/Ktlyns.g4
grammar Ktlyns;

@parser::header { 
	using Kat; 
	using System.Collections.Generic;
	}

program:
	statements;

block
	locals[KBlock Block]:
	LBRC statements RBRC	# RBlockStmts
	| LBRC RBRC				# RBlockEmpty;

statements
	locals[KBlock Block]:
	statement+;

statement
	locals[KStmt Stmt]:
	expr SDOT			# RStatement
	| var_decl SDOT		# RStatementVarDecl
	| if_else_decl		# RStatementIfElse
	| mth_decl			# RStatementMthDecl
	| ex_mth_decl SDOT	# RStatementExMthDecl;

if_else_decl
	locals[KStmt Stmt]:
	IF LPRN expr RPRN (
		block
		| statement
	) (ELSE (
		block
		| statement
	))? # RIfElse;

var_decl
	locals[KStmt Stmt]:
	id id			# RVarDecl
	| id id EQ expr	# RVarDeclExpr;

mth_decl
	locals[KStmt Stmt]:
	mth id LPRN mth_decl_arg RPRN block;

ex_mth_decl
	locals[KStmt Stmt]:
	EXTERNAL mth id LPRN mth_decl_arg RPRN;

mth
	locals[KId Id]:
	METHOD					# RMthVoid
	| METHOD LARR id RARR	# RMthType;

expr
	locals[KExpr Expr]:
	string						# RExprString
	| id						# RExprId
	| id LPRN call_args RPRN	# RExprCall
	| LPRN expr RPRN			# RExprGroup
	| unary						# RExprUnary
	| expr STAR expr			# RExprBinMult
	| expr SLASH expr			# RExprBinDiv
	| expr PLUS expr			# RExprBinAdd
	| expr MINUS expr			# RExprBinSub
	| id EQ expr				# RExprAssign
	| RET expr?					# RExprReturn;

unary
	locals[KExpr Expr]:
	factor			# RUnaryFactor
	| MINUS factor	# RUnaryMinus
	| NOT factor	# RUnaryNot
	| AMP id		# RUnaryAddress;

factor
	locals[KExpr Expr]:
	INT		# RFactorInt
	| DEC	# RFactorDec
	| TRUE	# RFactorTrue
	| FALSE	# RFactorFalse;

string
	locals[KStr Str]:
	STR;

id
	locals[KId Id]:
	id '[' INT? ']'	# RIDArray
	| ID			# RIDSimple;

call_args
	locals[List<KExpr> Exprs]:
							# RCallArgs
	| expr					# RCallArgsExpr
	| call_args COMMA expr	# RCallArgsAdd;

mth_decl_arg
	locals[List<KVarDecl> Decls]:
									# RMthDeclArg
	| var_decl						# RMthDeclArgVar
	| mth_decl_arg COMMA var_decl	# RMthDeclArgAdd;

WS:
	[ \n\t\r]+ -> skip;
DEC:
	[0-9]+ '.' [0-9]+;
INT:
	[0-9]+;

TRUE:
	'true';
FALSE:
	'false';

PLUS:
	'+';
MINUS:
	'-';
SLASH:
	'/';
STAR:
	'*';
AMP:
	'&';

STR:
	'"' [^"]* '"';

LPRN:
	'(';
RPRN:
	')';
LBRC:
	'{';
RBRC:
	'}';
LARR:
	'<';
RARR:
	'>';

COMMA:
	',';
DOT:
	'.';
SDOT:
	';';
EQ:
	'=';

IF:
	'if';
ELSE:
	'else';
AT:
	'@';
RET:
	'ret';

AND:
	'&&';
OR:
	'||';
NOT:
	'!';
EQEQ:
	'==';
NEQEQ:
	'!=';
GREAT:
	RARR;
EQGREAT:
	'>=';
LESS:
	LARR;
EQLESS:
	'<=';

METHOD:
	'method';

EXTERNAL:
	'ext';

ID:
	[a-zA-Z][a-zA-Z0-9]* '*'?;

COMMENT:
	'/*' .*? '*/' -> skip;

LINE_COMMENT:
	'//' ~[\r\n]* -> skip;
