Ktlyns.Core/Gen_Parsing/KtlynsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Ktlyns.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

 
	using Kat; 
	using System.Collections.Generic;
	
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class KtlynsParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, WS=3, DEC=4, INT=5, TRUE=6, FALSE=7, PLUS=8, MINUS=9, 
		SLASH=10, STAR=11, AMP=12, STR=13, LPRN=14, RPRN=15, LBRC=16, RBRC=17, 
		LARR=18, RARR=19, COMMA=20, DOT=21, SDOT=22, EQ=23, IF=24, ELSE=25, AT=26, 
		RET=27, AND=28, OR=29, NOT=30, EQEQ=31, NEQEQ=32, GREAT=33, EQGREAT=34, 
		LESS=35, EQLESS=36, METHOD=37, EXTERNAL=38, ID=39, COMMENT=40, LINE_COMMENT=41;
	public const int
		RULE_program = 0, RULE_block = 1, RULE_statements = 2, RULE_statement = 3, 
		RULE_if_else_decl = 4, RULE_var_decl = 5, RULE_mth_decl = 6, RULE_ex_mth_decl = 7, 
		RULE_mth = 8, RULE_expr = 9, RULE_unary = 10, RULE_factor = 11, RULE_string = 12, 
		RULE_id = 13, RULE_call_args = 14, RULE_mth_decl_arg = 15;
	public static readonly string[] ruleNames = {
		"program", "block", "statements", "statement", "if_else_decl", "var_decl", 
		"mth_decl", "ex_mth_decl", "mth", "expr", "unary", "factor", "string", 
		"id", "call_args", "mth_decl_arg"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", null, null, null, "'true'", "'false'", "'+'", "'-'", 
		"'/'", "'*'", "'&'", null, "'('", "')'", "'{'", "'}'", "'<'", "'>'", "','", 
		"'.'", "';'", "'='", "'if'", "'else'", "'@'", "'ret'", "'&&'", "'||'", 
		"'!'", "'=='", "'!='", null, "'>='", null, "'<='", "'method'", "'ext'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "WS", "DEC", "INT", "TRUE", "FALSE", "PLUS", "MINUS", 
		"SLASH", "STAR", "AMP", "STR", "LPRN", "RPRN", "LBRC", "RBRC", "LARR", 
		"RARR", "COMMA", "DOT", "SDOT", "EQ", "IF", "ELSE", "AT", "RET", "AND", 
		"OR", "NOT", "EQEQ", "NEQEQ", "GREAT", "EQGREAT", "LESS", "EQLESS", "METHOD", 
		"EXTERNAL", "ID", "COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Ktlyns.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static KtlynsParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public KtlynsParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public KtlynsParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public KBlock Block;
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
	 
		public BlockContext() { }
		public virtual void CopyFrom(BlockContext context) {
			base.CopyFrom(context);
			this.Block = context.Block;
		}
	}
	public partial class RBlockEmptyContext : BlockContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRC() { return GetToken(KtlynsParser.LBRC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRC() { return GetToken(KtlynsParser.RBRC, 0); }
		public RBlockEmptyContext(BlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRBlockEmpty(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRBlockEmpty(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRBlockEmpty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RBlockStmtsContext : BlockContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRC() { return GetToken(KtlynsParser.LBRC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRC() { return GetToken(KtlynsParser.RBRC, 0); }
		public RBlockStmtsContext(BlockContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRBlockStmts(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRBlockStmts(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRBlockStmts(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		try {
			State = 40;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				_localctx = new RBlockStmtsContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 34;
				Match(LBRC);
				State = 35;
				statements();
				State = 36;
				Match(RBRC);
				}
				break;
			case 2:
				_localctx = new RBlockEmptyContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 38;
				Match(LBRC);
				State = 39;
				Match(RBRC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementsContext : ParserRuleContext {
		public KBlock Block;
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statements; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterStatements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitStatements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementsContext statements() {
		StatementsContext _localctx = new StatementsContext(Context, State);
		EnterRule(_localctx, 4, RULE_statements);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 42;
				statement();
				}
				}
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEC) | (1L << INT) | (1L << TRUE) | (1L << FALSE) | (1L << MINUS) | (1L << AMP) | (1L << STR) | (1L << LPRN) | (1L << IF) | (1L << RET) | (1L << NOT) | (1L << METHOD) | (1L << EXTERNAL) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public KStmt Stmt;
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
			this.Stmt = context.Stmt;
		}
	}
	public partial class RStatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SDOT() { return GetToken(KtlynsParser.SDOT, 0); }
		public RStatementContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RStatementIfElseContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public If_else_declContext if_else_decl() {
			return GetRuleContext<If_else_declContext>(0);
		}
		public RStatementIfElseContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRStatementIfElse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRStatementIfElse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRStatementIfElse(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RStatementVarDeclContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Var_declContext var_decl() {
			return GetRuleContext<Var_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SDOT() { return GetToken(KtlynsParser.SDOT, 0); }
		public RStatementVarDeclContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRStatementVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRStatementVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRStatementVarDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RStatementMthDeclContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Mth_declContext mth_decl() {
			return GetRuleContext<Mth_declContext>(0);
		}
		public RStatementMthDeclContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRStatementMthDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRStatementMthDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRStatementMthDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RStatementExMthDeclContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Ex_mth_declContext ex_mth_decl() {
			return GetRuleContext<Ex_mth_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SDOT() { return GetToken(KtlynsParser.SDOT, 0); }
		public RStatementExMthDeclContext(StatementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRStatementExMthDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRStatementExMthDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRStatementExMthDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_statement);
		try {
			State = 58;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new RStatementContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 47;
				expr(0);
				State = 48;
				Match(SDOT);
				}
				break;
			case 2:
				_localctx = new RStatementVarDeclContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 50;
				var_decl();
				State = 51;
				Match(SDOT);
				}
				break;
			case 3:
				_localctx = new RStatementIfElseContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 53;
				if_else_decl();
				}
				break;
			case 4:
				_localctx = new RStatementMthDeclContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 54;
				mth_decl();
				}
				break;
			case 5:
				_localctx = new RStatementExMthDeclContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 55;
				ex_mth_decl();
				State = 56;
				Match(SDOT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_else_declContext : ParserRuleContext {
		public KStmt Stmt;
		public If_else_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_else_decl; } }
	 
		public If_else_declContext() { }
		public virtual void CopyFrom(If_else_declContext context) {
			base.CopyFrom(context);
			this.Stmt = context.Stmt;
		}
	}
	public partial class RIfElseContext : If_else_declContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(KtlynsParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPRN() { return GetToken(KtlynsParser.LPRN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPRN() { return GetToken(KtlynsParser.RPRN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE() { return GetToken(KtlynsParser.ELSE, 0); }
		public RIfElseContext(If_else_declContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRIfElse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRIfElse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRIfElse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_else_declContext if_else_decl() {
		If_else_declContext _localctx = new If_else_declContext(Context, State);
		EnterRule(_localctx, 8, RULE_if_else_decl);
		try {
			_localctx = new RIfElseContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			Match(IF);
			State = 61;
			Match(LPRN);
			State = 62;
			expr(0);
			State = 63;
			Match(RPRN);
			State = 66;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LBRC:
				{
				State = 64;
				block();
				}
				break;
			case DEC:
			case INT:
			case TRUE:
			case FALSE:
			case MINUS:
			case AMP:
			case STR:
			case LPRN:
			case IF:
			case RET:
			case NOT:
			case METHOD:
			case EXTERNAL:
			case ID:
				{
				State = 65;
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 73;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 68;
				Match(ELSE);
				State = 71;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LBRC:
					{
					State = 69;
					block();
					}
					break;
				case DEC:
				case INT:
				case TRUE:
				case FALSE:
				case MINUS:
				case AMP:
				case STR:
				case LPRN:
				case IF:
				case RET:
				case NOT:
				case METHOD:
				case EXTERNAL:
				case ID:
					{
					State = 70;
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_declContext : ParserRuleContext {
		public KStmt Stmt;
		public Var_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_decl; } }
	 
		public Var_declContext() { }
		public virtual void CopyFrom(Var_declContext context) {
			base.CopyFrom(context);
			this.Stmt = context.Stmt;
		}
	}
	public partial class RVarDeclExprContext : Var_declContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(KtlynsParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public RVarDeclExprContext(Var_declContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRVarDeclExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRVarDeclExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRVarDeclExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RVarDeclContext : Var_declContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		public RVarDeclContext(Var_declContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.EnterRVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKtlynsListener typedListener = listener as IKtlynsListener;
			if (typedListener != null) typedListener.ExitRVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKtlynsVisitor<TResult> typedVisitor = visitor as IKtlynsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRVarDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Var_declContext var_decl() {
		Var_declContext _localctx = new Var_declContext(Context, State);
		EnterRule(_localctx, 10, RULE_var_decl);
		try {
			State = 83;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				_localctx = new RVarDeclContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 75;
				id(0);
				State = 76;
				id(0);
				}
				break;
			case 2:
				_localctx = new RVarDeclExprContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				id(0);
				State = 79;
				id(0);
				State = 80;
				Match(EQ);
				State = 81;
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
